--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -17,10 +17,10 @@
                     <form class="w-full flex flex-wrap" (submit)="login()">
                         <div class="w-full flex justify-center flex-wrap mt-4">
                             <div class="w-[70%] mb-4">
-                                <input type="text" id="username" name="username" maxlength="40" value="{{email}}" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="USERNAME: ">
+                                <input type="text" id="mail" name="mail" maxlength="40" [(ngModel)]="signinForm.mail" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="USERNAME: ">
                             </div>
                             <div class="w-[70%] mb-4">
-                                <input type="password" id="password" name="password" value="{{password}}" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
+                                <input type="password" id="password" name="password" [(ngModel)]="signinForm.password" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
                             </div>
                         </div>
                         <div class="w-full flex justify-center">
@@ -51,21 +51,21 @@
                             </div>
                         </div>
                     </div>
-                    <form class="lg:w-[70%] w-[80%] flex justify-center flex-wrap mt-4" action="signin()" (submit)="signin()">
+                    <form class="lg:w-[70%] w-[80%] flex justify-center flex-wrap mt-4" (submit)="signup()">
                         <div class="flex justify-between w-full">
                             <div class="lg:w-[48%] w-full mb-4">
-                                <input required type="text" id="nome" name="nome" minlength="1" maxlength="255" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Nome* ">
+                                <input required type="text" [(ngModel)]="signupForm.first_name" id="nome" name="first_name" minlength="1" maxlength="255" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Nome* ">
                             </div>
                             <div class="lg:w-[48%] w-full mb-4">
-                                <input required type="text" id="cognome" name="cognome" minlength="1" maxlength="255" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Cognome* ">
+                                <input required type="text" [(ngModel)]="signupForm.last_name" id="cognome" name="last_name" minlength="1" maxlength="255" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Cognome* ">
                             </div>
                         </div>
                         <div class="flex justify-between w-full">
                             <div class="lg:w-[48%] w-full mb-4">
-                                <input required type="text" id="username" name="username" minlength="1" maxlength="50" maxlength="40" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Username* ">
+                                <input required type="text" [(ngModel)]="signupForm.username" id="username" name="username" minlength="1" maxlength="50" maxlength="40" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Username* ">
                             </div>
                             <div class="lg:w-[48%] w-full mb-4">
-                                <input type="number" id="eta" name="eta" max="99" min="16" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Età ">
+                                <input required type="tel" [(ngModel)]="signupForm.numeroTelefono" id="tel" name="numeroTelefono" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Cellulare* ">
                             </div>
                         </div>
                         <div class="w-full flex flex-nowrap mb-4 lg:justify-between justify-center">
@@ -74,39 +74,39 @@
                                     <p class="px-4 w-full text-base">Sesso:</p>
                                 </div>
                                 <div class="w-1/4 flex items-center flex-nowrap">
-                                    <input required type="radio" name="sesso" class="rounded-full w-5 h-5 bg-gray-400">
+                                    <input required type="radio" name="sesso" [ngModelOptions]="{standalone: true}" [(ngModel)]="signupForm.sesso" value="m" class="rounded-full w-5 h-5 bg-gray-400">
                                     <div class="px-4 flex justify-center border-primary border-4 ml-2">M</div>
                                 </div>
                                 <div class="w-1/4 flex items-center flex-nowrap">
-                                    <input required type="radio" name="sesso" class="rounded-full w-5 h-5 bg-gray-400">
+                                    <input required type="radio" name="sesso" [ngModelOptions]="{standalone: true}" [(ngModel)]="signupForm.sesso" value="f" class="rounded-full w-5 h-5 bg-gray-400">
                                     <div class="px-4 flex justify-center border-primary border-4 ml-2">F</div>
                                 </div>
                                 <div class="w-1/4 flex items-center flex-nowrap">
-                                    <input required type="radio" name="sesso" class="rounded-full w-5 h-5 bg-gray-400">
+                                    <input required type="radio" name="sesso" [ngModelOptions]="{standalone: true}" [(ngModel)]="signupForm.sesso" value="a" class="rounded-full w-5 h-5 bg-gray-400">
                                     <div class="px-4 flex justify-center border-primary border-4 ml-2">Altro</div>
                                 </div>
                             </div>
                             <div class="w-auto lg:hidden flex items-center ml-4">
                                 <div class="flex items-center w-full border-primary border-4">
                                     <p class="w-auto">Sesso: </p>
-                                    <select required="" id="select" class="border p-2">
-                                        <option value="maschio">M</option>
-                                        <option value="femmina">F</option>
-                                        <option value="altro">Altro</option>
+                                    <select required="" name="sesso" [(ngModel)]="signupForm.sesso" id="select" class="border p-2">
+                                        <option value="m">M</option>
+                                        <option value="f">F</option>
+                                        <option value="a">Altro</option>
                                     </select>
                                 </div>
                             </div>
                         </div>
                         <div class="w-full mb-4">
-                            <input required type="email" id="email" name="email" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Eamil* ">
+                            <input required type="email" [(ngModel)]="signupForm.mail" id="email" name="mail" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Eamil* ">
                         </div>
-                        <div class="w-full mb-4">
-                            <input required type="tel" id="tel" name="telefono" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Cellulare* ">
+                        <div class="w-full mb-4 border-primary border-4 rounded-full px-4 flex flex-wrap items-center">
+                            <p class="w-1/3">Data di nascita:</p> <input type="date" [(ngModel)]="signupForm.birthDate" id="dataDiNascita" name="dataDiNascita"  class="m-0 px-4 py-1 w-2/3 bg-transparent" placeholder="Data di nascita ">
                         </div>
                         <div class="w-full mb-4">
                             <div class="w-full flex lg:flex-nowrap flex-wrap">
-                                <input required type="password" id="password1" name="password1" class="mt-1 px-4 py-1 lg:w-1/2 w-full lg:mr-2 border-primary border-4 rounded-full" placeholder="Password* ">
-                                <input required type="password" id="password2" name="password2" class="mt-1 px-4 py-1 lg:w-1/2 w-full border-primary border-4 rounded-full" placeholder="Ripeti Password* ">
+                                <input required type="password" [(ngModel)]="signupForm.passwd" id="password1" name="passwd" class="mt-1 px-4 py-1 lg:w-1/2 w-full lg:mr-2 border-primary border-4 rounded-full" placeholder="Password* ">
+                                <input required type="password" [(ngModel)]="signupForm.ripetiPassword" id="password2" name="ripetiPassword" class="mt-1 px-4 py-1 lg:w-1/2 w-full border-primary border-4 rounded-full" placeholder="Ripeti Password* ">
                             </div>
                         </div>
                         <div class="w-full flex justify-center">
