--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -14,8 +14,8 @@
     </div>
     <div class="flex justify-center h-full">
         <div class="container flex flex-wrap justify-center h-full">
-            <div class="w-[70%] flex flex-nowrap mt-20">
-                <div class="w-[25%] h-full ">
+            <div class="lg:w-[70%] w-full flex lg:justify-normal justify-start flex-nowrap mt-20">
+                <div class="lg:w-[25%] w-[50%] h-full ">
                     <div class="w-full bg-primary box-shadow-for-menu">
                         <ul>
                             <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('profilo')">Profilo</li>
@@ -26,14 +26,14 @@
                         </ul>
                     </div>
                 </div>
-                <div class="w-[75%] h-full  flex flex-wrap justify-center items-center py-10">
+                <div class="w-[75%] h-full  flex flex-wrap justify-center items-center lg:py-10">
                     <div class="h-[20vmin] w-[20vmin]">
                         <div class="h-[20vmin] w-[20vmin] rounded-full bg-gray-500">
 
                         </div>
                     </div>
-                    <div class="w-[10px] h-full bg-black ml-20 mr-20"></div>
-                    <div class="mx-10 flex items-center">
+                    <div class="lg:block hidden  w-[10px] h-full bg-black ml-20 mr-20"></div>
+                    <div class="lg:w-auto w-[50%] mx-10 flex items-center">
                         <ul>
                             <li class="p-2 text-xl font-bold">Nome</li>
                             <li class="p-2 text-xl font-bold">Età</li>
@@ -142,23 +142,24 @@
                     </div>
                     <div class="w-full h-6 bg-secondary"></div>
                     <div class="w-full">
-                        <div class="hidden lg:flex w-full lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-4">
-                            <button (click)="functionChangeManuPreferiti('tutti')" class="rounded-full text-white lg:mr-2 lg:px-6 px-3 lg:py-1 text-sm" [ngClass]="{'bg-secondary': menuPreferitiSelected === 'tutti', 'bg-[#ACDEFF]': menuPreferitiSelected !== 'tutti'}">
+                        <div class="flex lg:w-full w-80% lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-4 lg:justify-normal justify-between">
+                            <button (click)="functionChangeManuPreferiti('tutti')" class="rounded-full lg:mr-2 lg:px-6 px-3 lg:py-1 text-sm" [ngClass]="{'bg-secondary': menuPreferitiSelected === 'tutti', 'bg-[#ACDEFF]': menuPreferitiSelected !== 'tutti', 'text-white': menuPreferitiSelected === 'tutti'}">
                                 TUTTI
                             </button>
 
-                            <button (click)="functionChangeManuPreferiti('squadre')" class="rounded-full lg:mx-2 lg:px-6 px-3 lg:py-1 text-sm" [ngClass]="{'bg-secondary': menuPreferitiSelected === 'squadre', 'bg-[#ACDEFF]': menuPreferitiSelected !== 'squadre'}">
+                            <button (click)="functionChangeManuPreferiti('squadre')" class="rounded-full lg:mx-2 lg:px-6 px-3 lg:py-1 text-sm" [ngClass]="{'bg-secondary': menuPreferitiSelected === 'squadre', 'bg-[#ACDEFF]': menuPreferitiSelected !== 'squadre' , 'text-white': menuPreferitiSelected === 'squadre'}">
                                 SQUADRE
                             </button>
 
-                            <button (click)="functionChangeManuPreferiti('articoli')" class="rounded-full lg:ml-2 lg:px-6 px-3 lg:py-1 text-sm" [ngClass]="{'bg-secondary': menuPreferitiSelected === 'articoli', 'bg-[#ACDEFF]': menuPreferitiSelected !== 'articoli'}">
+                            <button (click)="functionChangeManuPreferiti('articoli')" class="rounded-full lg:ml-2 lg:px-6 px-3 lg:py-1 text-sm" [ngClass]="{'bg-secondary': menuPreferitiSelected === 'articoli', 'bg-[#ACDEFF]': menuPreferitiSelected !== 'articoli' , 'text-white': menuPreferitiSelected === 'articoli'}">
                                 ARTICOLI
                             </button>
 
                         </div>
                     </div>
                     <div *ngIf="menuPreferitiSelected==='tutti'" class="w-full flex flex-wrap mt-5">
-                        <div class="w-1/3 flex flex-wrap my-8">
+                        <div class="lg:w-1/3 w-full flex flex-wrap my-8">
+                            <p class="text-center text-base w-full justify-center flex mb-2">SQUADRE: </p>
                             <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
                                 <div class="w-2/5 flex justify-center">
                                     <div class="w-20 h-20 m-2 bg-white rounded-full"></div>
@@ -171,7 +172,8 @@
                                 <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
                             </div>
                         </div>
-                        <div class="w-1/3 flex flex-wrap justify-center my-8">
+                        <p class="text-center text-base w-full justify-center flex mb-2">PREFERITI: </p>
+                        <div class="lg:w-1/3 w-full flex flex-wrap justify-center">
                             <div class="w-[80%] bg-primary h-24 rounded-3xl flex items-center justify-center text-xl">
                                 <p class="text-white">Titolo articolo</p>
                             </div>
@@ -179,92 +181,6 @@
                                 <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
                             </div>
                         </div>
-                        <!-- aggiungo solo per la visualizzazione -->
-                        <div class="w-1/3 flex flex-wrap justify-end my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
-                                <div class="w-2/5 flex justify-center">
-                                    <div class="w-20 h-20 m-2 bg-white rounded-full"></div>
-                                </div>
-                                <div class="w-3/5 flex items-center">
-                                    <p class="text-white text-xl">Nome squadra</p>
-                                </div>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap  my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
-                                <div class="w-2/5 flex justify-center">
-                                    <div class="w-20 h-20 m-2 bg-white rounded-full"></div>
-                                </div>
-                                <div class="w-3/5 flex items-center">
-                                    <p class="text-white text-xl">Nome squadra</p>
-                                </div>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap justify-center my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex items-center justify-center text-xl">
-                                <p class="text-white">Titolo articolo</p>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap justify-end my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex items-center justify-center text-xl">
-                                <p class="text-white">Titolo articolo</p>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex items-center justify-center text-xl">
-                                <p class="text-white">Titolo articolo</p>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap justify-center my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
-                                <div class="w-2/5 flex justify-center">
-                                    <div class="w-20 h-20 m-2 bg-white rounded-full"></div>
-                                </div>
-                                <div class="w-3/5 flex items-center">
-                                    <p class="text-white text-xl">Nome squadra</p>
-                                </div>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap justify-end my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex flex-wrap">
-                                <div class="w-2/5 flex justify-center">
-                                    <div class="w-20 h-20 m-2 bg-white rounded-full"></div>
-                                </div>
-                                <div class="w-3/5 flex items-center">
-                                    <p class="text-white text-xl">Nome squadra</p>
-                                </div>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <div class="w-1/3 flex flex-wrap my-8">
-                            <div class="w-[80%] bg-primary h-24 rounded-3xl flex items-center justify-center text-xl">
-                                <p class="text-white">Titolo articolo</p>
-                            </div>
-                            <div class="w-[80%] flex justify-end">
-                                <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full">Rimuovi</button>
-                            </div>
-                        </div>
-                        <!-- fino a qui -->
                     </div>
                     <div *ngIf="menuPreferitiSelected==='articoli'" class="w-full flex flex-wrap mt-5">
                         <div class="w-1/3 flex flex-wrap my-8">
