--- a/NBA/src/app/views/partita-page/partita-page.component.html
+++ b/NBA/src/app/views/partita-page/partita-page.component.html
@@ -13,32 +13,32 @@
             <div class="lg:w-[75%] w-full rounded-3xl h-[40vh] flex justify-center bg-[#DCF1FF]">
                 <div class="w-1/3 flex flex-wrap justify-center items-center">
                     <div class="h-1/4 w-full flex justify-center"></div>
-                    <div class="h-1/4 w-full flex justify-center"><img src={{matchStats.calendarioDateResponse.logoAway}} alt="img"></div>
-                    <div class="h-1/4 w-full flex justify-center">
+                    <div class="h-1/3 w-full flex justify-center"><img src={{matchStats.calendarioDateResponse.logoAway}} alt="img"></div>
+                    <div class="h-1/3 w-full flex justify-center items-center">
                         <p class="w-full font-bold text-center text-2xl">{{matchStats.calendarioDateResponse.teamAwayName}}</p>
                     </div>
-                    <div class="h-1/4 w-full flex justify-center">
-                        <p class="font-bold text-xl">(1-20)</p>
-                    </div>
                 </div>
                 <div class="w-1/3 flex flex-wrap justify-center items-center">
-                    <div class="h-1/4 w-full flex justify-center">
+                    <div class="h-1/4 w-full flex justify-center items-center">
                         <p class="font-bold text-xl">{{matchStats.calendarioDateResponse.gameStartDate}}</p>
                     </div>
-                    <div class="h-1/4 w-full flex justify-center">
-                        <p class="font-bold text-4xl">{{matchStats.calendarioDateResponse.scoreTeamAway}}-{{matchStats.calendarioDateResponse.scoreTeamHome}}</p>
+                    <div class="h-1/3 w-full flex justify-between items-center">
+                        <p class="w-full text-center font-bold text-4xl">{{matchStats.calendarioDateResponse.scoreTeamAway}}</p>
+                        <p class="w-full text-center font-bold text-4xl">-</p>
+                        <p class="w-full text-center font-bold text-4xl">{{matchStats.calendarioDateResponse.scoreTeamHome}}</p>
                     </div>
-                    <div class="h-1/4 w-full flex justify-center"></div>
-                    <div class="h-1/4 w-full flex justify-center">barra</div>
+                    <div class="h-1/3 w-full flex justify-center items-center">
+                        <div class="w-full h-1/4 border-black rounded-full flex flex-nowrap justify-center">
+                            <div class="w-[50%] bg-red-600 rounded-l-full"></div>
+                            <div class="w-[50%] bg-blue-600 rounded-r-full"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="w-1/3 flex flex-wrap justify-center items-center">
                     <div class="h-1/4 w-full flex justify-center"></div>
-                    <div class="h-1/4 w-full flex justify-center"><img src={{matchStats.calendarioDateResponse.logoHome}} alt="img"></div>
-                    <div class="h-1/4 w-full flex justify-center">
+                    <div class="h-1/3 w-full flex justify-center"><img src={{matchStats.calendarioDateResponse.logoHome}} alt="img"></div>
+                    <div class="h-1/3 w-full flex justify-center items-center">
                         <p class="w-full text-center font-bold text-2xl">{{matchStats.calendarioDateResponse.teamHomeName}}</p>
-                    </div>
-                    <div class="h-1/4 w-full flex justify-center">
-                        <p class="font-bold text-xl">(17-3)</p>
                     </div>
                 </div>
             </div>
