--- a/NBA/src/app/components/footer/footer.component.html
+++ b/NBA/src/app/components/footer/footer.component.html
@@ -46,7 +46,7 @@
             <div class="md:w-1/4 w-full lg:hidden">
                 <h3 class="text-white flex justify-center">CONTATTI</h3>
                 <ul class="flex flex-col m-4">
-                    <li class="cursor-pointer" routerLink="'/'">Maps</li>
+                    <li class="cursor-pointer"><a href="https://www.google.com/maps/place/Sticazzi/@40.4563173,-3.7903946,17z/data=!3m1!4b1!4m6!3m5!1s0xd41876d9c5c1381:0x5f28e6c781534e1e!8m2!3d40.4563173!4d-3.7878197!16s%2Fg%2F11sb2mlmq7?entry=ttu">Maps</a></li>
                     <li>lorenzo.garnero@edu.itspiemonte.it</li>
                     <li>andrea.cavalca@edu.itspiemonte.it</li>
                     <li>giorgio.modeo@edu.itspiemonte.it</li>
