--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -64,10 +64,10 @@
                     </h2>
                 </div>
                 <div class="w-full h-6 bg-secondary"></div>
-                <div class="mt-10 flex flex-wrap justify-center lg:justify-between">
-                    <app-post-articolo [extended]="true"></app-post-articolo>
-                    <app-post-articolo [extended]="false"></app-post-articolo>
-                    <app-post-articolo [extended]="false"></app-post-articolo>
+                <div class="mt-10 flex flex-wrap justify-center lg:justify-between" *ngFor="let art of article">
+                    <app-post-articolo [artId]="art.id" [extended]="true"></app-post-articolo>
+                    <app-post-articolo [artId]="art.id" [extended]="false"></app-post-articolo>
+                    <app-post-articolo [artId]="art.id" [extended]="false"></app-post-articolo>
                 </div>
             </div>
         </div>
