--- a/NBA/src/app/components/post-articolo/post-articolo.component.html
+++ b/NBA/src/app/components/post-articolo/post-articolo.component.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="flex justify-end mr-8">
                         <div class="bg-secondary rounded-full text-white px-4 text-sm flex items-center">
-                            <button class="" routerLink="/articolo">Apri Articolo</button>
+                            <button class="" [routerLink]="['/articolo', singleArticle.blog.id]">Apri Articolo</button>
                         </div>
                     </div>
                     <div class="flex flex-nowrap justify-evenly w-full">
