--- a/NBA/src/app/views/partita-page/partita-page.component.html
+++ b/NBA/src/app/views/partita-page/partita-page.component.html
@@ -106,7 +106,7 @@
                             <td class="w-[40%] p-0 border-b-4 border-r-4 border-white">
                                 <div class="flex flex-nowrap justify-center w-full">
                                     <div class="w-1/4 flex justify-center items-center bg-[#ACDEFF] border-r-4 border-white h-10">
-                                        <p></p>
+                                        <p>{{player}}</p>
                                     </div>
                                     <div class="w-3/4 flex justify-center items-center bg-[#ACDEFF] h-10">
                                         <p>{{player.nome}}</p>
