--- a/NBA/src/app/components/post-articolo/post-articolo.component.html
+++ b/NBA/src/app/components/post-articolo/post-articolo.component.html
@@ -6,12 +6,12 @@
             </div>
             <img class="top-0 h-full w-full" src="../../../assets/sfondo-home.png" alt="product image" />
             <div class="absolute bottom-0 h-auto w-full bg-primary">
-                <p class="font-bold text-xl flex items-center h-full px-4 py-2 text-white text-center w-full">MILWAUKEE BUCKS ANCORA IN VETTA</p>
+                <p class="font-bold text-xl flex items-center h-full px-4 py-2 text-white text-center w-full">{{singleArticle.blog.titolo}}</p>
             </div>
         </div>
         <div class="">
             <div class="mt-2 bg-secondary">
-                <p class="px-4 py-2 text-white">La National Basketball Association (NBA), una delle leghe sportive più prestigiose al mondo, ha una storia ricca e affascinante che ha avuto inizio il 6 giugno 1946 a New York City sotto il nome di Basketball Association of America (BAA)...</p>
+                <p class="px-4 py-2 text-white">{{singleArticle.blog.riassunto}}</p>
             </div>
             <div class="flex flex-nowrap justify-between mt-2 lg:mx-0 ml-2">
                 <div class="flex flex-nowrap">
