logica e dati articoli

--- a/NBA/src/app/views/blog-page/blog-page.component.html
+++ b/NBA/src/app/views/blog-page/blog-page.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<section class="">
+<section>
     <div class="w-full h-20 bg-primary flex justify-center items-center">
         <h2 class=" text-white text-4xl font-bold">
             BLOG
@@ -16,9 +16,9 @@
                 </div>
                 <div class="w-full h-6 bg-secondary"></div>
                 <div class="mt-10 flex flex-wrap justify-center lg:justify-between">
-                    <app-post-articolo [extended]="true"></app-post-articolo>
-                    <app-post-articolo [extended]="false"></app-post-articolo>
-                    <app-post-articolo [extended]="false"></app-post-articolo>
+                    <app-post-articolo [artId]="article[0].id" [extended]="true"></app-post-articolo>
+                    <app-post-articolo [artId]="article[1].id" [extended]="false"></app-post-articolo>
+                    <app-post-articolo [artId]="article[2].id" [extended]="false"></app-post-articolo>
                 </div>
             </div>
         </div>
