--- a/NBA/src/app/components/post-articolo/post-articolo.component.html
+++ b/NBA/src/app/components/post-articolo/post-articolo.component.html
@@ -2,9 +2,9 @@
     <div class="w-full max-w-xl">
         <div class="relative -z-10">
             <div class="absolute top-4 h-12 w-full bg-gradient-to-r from-green-500 via-green-500 to-transparent">
-                <p class="font-bold text-3xl flex items-center h-full pl-4">TEAM</p>
+                <p class="font-bold text-3xl flex items-center h-full pl-4">{{singleArticle.blog.tipo | uppercase }}</p>
             </div>
-            <img class="top-0 h-full w-full" src="../../../assets/sfondo-home.png" alt="product image" />
+            <img class="top-0 h-full w-full" src="{{singleArticle.blog.foto}}" alt="product image" />
             <div class="absolute bottom-0 h-auto w-full bg-primary">
                 <p class="font-bold text-xl flex items-center h-full px-4 py-2 text-white text-center w-full">{{singleArticle.blog.titolo | uppercase}}</p>
             </div>
@@ -42,9 +42,9 @@
     <div class="w-full flex flex-nowrap h-full">
         <div class="relative -z-10 w-2/5">
             <div class="absolute top-4 h-12 w-full bg-gradient-to-r from-green-500 via-green-500 to-transparent">
-                <p class="font-bold text-3xl flex items-center h-full pl-4">TEAM</p>
+                <p class="font-bold text-3xl flex items-center h-full pl-4">{{singleArticle.blog.tipo | uppercase}}</p>
             </div>
-            <img class="top-0 h-full w-full object-cover" src="../../../assets/sfondo-home.png" alt="product image" />
+            <img class="top-0 h-full w-full object-cover" src="{{singleArticle.blog.foto}}" alt="product image" />
         </div>
         <div class="w-3/5 h-auto">
             <div class="h-full flex flex-col">
@@ -89,9 +89,9 @@
     <div class="w-full max-w-xl">
         <div class="relative -z-10">
             <div class="absolute top-4 h-12 w-full bg-gradient-to-r from-green-500 via-green-500 to-transparent">
-                <p class="font-bold text-3xl flex items-center h-full pl-4">TEAM</p>
+                <p class="font-bold text-3xl flex items-center h-full pl-4">{{singleArticle.blog.tipo}}</p>
             </div>
-            <img class="top-0 h-full w-full" src="../../../assets/sfondo-home.png" alt="product image" />
+            <img class="top-0 h-full w-full" src="{{singleArticle.blog.foto}}" alt="product image" />
             <div class="absolute bottom-0 h-auto w-full bg-primary">
                 <p class="font-bold text-xl flex items-center h-full px-4 py-2 text-white text-center w-full">{{singleArticle.blog.titolo | uppercase }}</p>
             </div>
