--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -411,11 +411,11 @@
                                         </div>
                                     </div>
                                     <div class="w-full flex justify-around items-center mb-8">
-                                        <p class="text-xl font-bold">slot liberi: 3</p>
-                                        <p class="text-xl font-bold">squadre scelte: 2</p>
+                                        <p class="text-xl font-bold">slot liberi: {{5-totalTeamEast}}</p>
+                                        <p class="text-xl font-bold">squadre scelte: {{totalTeamEast}}</p>
                                         <button class="bg-secondary rounded-full px-4 py-2 text-white" (click)="showTeams=false">CHIUDI E CONFERMA</button>
-                                        <p class="text-xl font-bold">slot liberi: 4</p>
-                                        <p class="text-xl font-bold">squadre scelte: 1</p>
+                                        <p class="text-xl font-bold">slot liberi: {{5-totalTeamWest}}</p>
+                                        <p class="text-xl font-bold">squadre scelte: {{totalTeamWest}}</p>
                                     </div>
                                 </div>
                                 <div class="w-full flex justify-end items-center">
