--- a/NBA/src/app/components/card-partita/card-partita.component.html
+++ b/NBA/src/app/components/card-partita/card-partita.component.html
@@ -38,7 +38,7 @@
                 <p class="text-white">TABELLINO</p>
             </div>
         </div>
-        <div class="w-full h-[20%] flex justify-center my-4">
+        <!-- <div class="w-full h-[20%] flex justify-center my-4">
             <div class="w-1/2 h-full flex flex-nowrap justify-between">
                 <div class="w-full h-10 flex justify-center">
                     <span class="h-10 w-10 rounded-full flex justify-center items-center">
@@ -55,6 +55,6 @@
                     </span>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
